# git-pulsar

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
demo/: _shared.tape  demo_dark.tape  demo_light.tape
scripts/: spawn_cluster.sh  test_distributed.sh
src/: README.md  cli.py  constants.py  daemon.py  git_wrapper.py  ops.py  service.py  system.py
src/git_pulsar/: __init__.py  cli.py  config.py  constants.py  daemon.py  git_wrapper.py  ops.py  service.py  system.py
tests/: README.md  test_cli.py  test_config.py  test_daemon.py  test_git_wrapper.py  test_ops.py  test_properties.py  test_system.py
