[project]
name = "git-pulsar"
version = "0.2.0"
description = "Automated, paranoid git backups for students and casual coding."
readme = "README.md"
authors = [
    { email = "jackson.ferguson0@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
git-pulsar = "src.cli:main"
git-pulsar-daemon = "src.daemon:main"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "hypothesis>=6.150.2",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
omit = ["src/service.py"]
