[project]
name = "git-pulsar"
version = "0.14.0"
description = "Automated, paranoid git backups for students and casual coding."
readme = "README.md"
authors = [
    { email = "jackson.ferguson0@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=14.2.0",
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Repository = "https://github.com/jacksonfergusondev/git-pulsar"
Issues = "https://github.com/jacksonfergusondev/git-pulsar/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
git-pulsar = "git_pulsar.cli:main"
git-pulsar-daemon = "git_pulsar.daemon:main"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "bump-my-version>=1.2.6",
    "hypothesis>=6.150.2",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.13",
]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# E, W: Standard linting
# F: Pyflakes (errors)
# I: Isort (imports)
# B: Bugbear (catches subtle bugs like mutable default args)
# UP: Pyupgrade (modernizes syntax, e.g. types)
# SIM: Simplify (refactors logic)
# T20: Print (prevents accidentally leaving print() in CLI tools)
# PT: Pytest style
# C4: Comprehensions (better list/dict comp usage)
select = ["E", "F", "I", "B", "UP", "SIM", "T20", "PT", "C4"]
ignore = ["E501"] # Line length handled by formatter

# Allow ignored variables (e.g. for unpacking)
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["git_pulsar"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
omit = ["src/git_pulsar/service.py"]

[tool.bumpversion]
current_version = "0.14.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "chore: bump version {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "# 🔭 Git Pulsar (v{current_version})"
replace = "# 🔭 Git Pulsar (v{new_version})"
